# chat

./: CMakeLists.txt  LICENSE  README.md  dump.rdb
include/: public.hh
include/server/: ChatServer.hh  ChatService.hh  FriendModel.hh  Group.hh  GroupModel.hh  GroupUser.hh  MySQL.hh  OfflineMessageModel.hh  Redis.hh  User.hh  UserModel.hh  db.hh
src/client/: main.cc
src/server/: ChatServer.cc  ChatService.cc  FriendModel.cc  GroupModel.cc  MySQL.cc  OfflineMessageModel.cc  Redis.cc  UserModel.cc  db.cc  main.cc
